--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "eslint": "^6.0.1",
     "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "tape": "^4.8.0"
   },
   "homepage": "https://github.com/feross/eslint-config-standard-react",
@@ -51,7 +52,8 @@
   "main": "index.js",
   "peerDependencies": {
     "eslint": ">=5.0.0",
-    "eslint-plugin-react": ">=7.6.1"
+    "eslint-plugin-react": ">=7.6.1",
+    "eslint-plugin-react-hooks": ">=2.0.1"
   },
   "repository": {
     "type": "git",
